--- a/gulp/index.html
+++ b/gulp/index.html
@@ -4,65 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&display=swap" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Gulp Roast</title>
 </head>
 <body>
+  <header>
+    <nav id="topnav">
+      <div class="logo">
+        <a href="https://uxuicurriculum.wixsite.com/gulproast">
+          <img src="media/gulp-logo-light.png" alt="Gulp Roast Coffee" style="width:300px" />
+        </a>
+      </div>
+
+      <ul id="nav-list">
+        <li><a href="https://uxuicurriculum.wixsite.com/gulproast"><i class="fa-solid fa-mug-hot"></i>&nbsp About</a></li>
+        <li><a href="https://uxuicurriculum.wixsite.com/gulproast"><i class="fa-solid fa-location-dot"></i>&nbsp Locations</a></li>
+        <li><a href="https://uxuicurriculum.wixsite.com/gulproast"><i class="fa-solid fa-phone"></i>&nbsp Contact</a></li>
+      </ul>
+    </nav>
+    <div class="border">
+    </div>
+  </header>
+
+  <main>
+
+    <section>
+      <div class="about">
+        <h2>About Us</h2>
+        <p>Life without coffee is a gloomy place. That’s why Gulp Roast has been proudly serving up fresh coffee to the 
+          <u>
+          <a href="https://goo.gl/maps/3rAyszfwSDx8Si2Y9" class="link">San Francisco area</a>
+            </u> since 2000. Our coffee is locally sourced with the most delicious blends coming directly to your home, right from coffee farmers near you. Our coffee makes even the most difficult days just a tad easier to get through.
+        </p>
+<p>
+          For us, this isn’t just brewing coffee. This is an active life mission to bring our customers the most flavorful, full-bodied beverages we can get our hands on. Browse our site to learn more about our locations and sourcing techniques.
+        </p>
+        <a href="https://uxuicurriculum.wixsite.com/gulproast"><button class="button">Contact Us</button></a>
+      </div>
+      </section>
     
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&display=swap" rel="stylesheet">
+      <aside>
+        <div class="card">
+        <a href="https://uxuicurriculum.wixsite.com/gulproast">
+          <img src="media/gulp-pouring-coffee-vertical.jpg" alt="Gulp Roast Coffee" id="coffee-image-vertical" media="(max-width: 1000px)">
+          <!-- <img src="/media/gulp-pouring-coffee-horizontal.jpg" alt="Gulp Roast Coffee" id="coffee-image-horizontal" media="(max-width: 992px)"> -->
+           <figcaption class="caption">Our pour-over coffee is known for its freshness and amazing taste.
+            </figcaption>
+        </a>
+        </div>
+    </aside>
+  </main>
 
-<header>
-  <nav>
-    <ul>
-      <li class="logo"><a href="https://uxuicurriculum.wixsite.com/gulproast"><img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
-      <li><a href="https://uxuicurriculum.wixsite.com/gulproast"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span> About</a></li>
-      <li><a href="https://uxuicurriculum.wixsite.com/gulproast"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span> Products</a></li>
-      <li><a href="https://uxuicurriculum.wixsite.com/gulproast"><span aria-hidden="true" class="fa-solid fa-phone"></span> Contact</a></li>
-    </ul>
-  </nav>
-</header>
-<div class="main-bkgd">
-  <section class="main">
-    <article>
-      <h1>About Us</h1>
-      <p>Life without coffee is a gloomy place. That’s why Gulp Roast has been proudly serving up fresh coffee to the <a href="https://goo.gl/maps/3rAyszfwSDx8Si2Y9" target="_blank">San Francisco area</a> since 2000. Our coffee is locally sourced with the most delicious blends coming directly to your home, right from coffee farmers near you. Our coffee makes even the most difficult days just a tad easier to get through.</p>
+  <div class="border">
+  </div>
 
-      <p>For us, this isn’t just brewing coffee. This is an active life mission to bring our customers the most flavorful, full-bodied beverages we can get our hands on. Browse our site to learn more about our locations and sourcing techniques.</p>
+  <footer class="footer">
+    <p class="copyright-text">2022 Gulp Roast Coffee. All rights reserved.</p>
+  </footer>
 
-      <a class="button" href="https://uxuicurriculum.wixsite.com/gulproast">Contact Us</a>
-    </article>
-    <figure>
-      <img src="https://assets.codepen.io/6306176/gulp-pouring-coffee-vertical.jpg" alt="Making pour-over coffee at our shop." />
-      <figcaption>Our pour-over coffee is known for its freshness and amazing taste.</figcaption>
-    </figure>
-  </section>
-</div>
-<footer>
-  <p>&copy; 2022 Gulp Roast Coffee. All rights reserved.</p>
-  <ul>
-    <li>
-      <a href="https://facebook.com" target="_blank">
-        <span aria-hidden="true" class="fa-brands fa-facebook-square"></span>
-        <span class="sr-only">Facebook</span>
-      </a>
-    </li>
-    <li>
-      <a href="https://twitter.com" target="_blank">
-        <span aria-hidden="true" class="fa-brands fa-twitter-square"></span>
-        <span class="sr-only">Twitter</span>
-      </a>
-    </li>
-    <li>
-      <a href="https://instagram.com" target="_blank">
-        <span aria-hidden="true" class="fa-brands fa-instagram-square"></span>
-        <span class="sr-only">Instagram</span>
-      </a>
-    </li>
-  </ul>
-
-</footer>
 </body>
 </html>
